Fix T41112: Rotate manipulator (Trackball) + release confirm not working?

Usual same issue (unset property != set property to default value).

Review and minor edits by mont29 (Bastien Montagne).